test/src/e2e_vm_tests/test_programs/should_fail/storage_configurable/src/main.sw
contract;

configurable {
  INITIAL_OWNER: u64 = 0u64,
}

storage {
  owner: u64 = INITIAL_OWNER,
}

abi MyContract {
    fn test_function() -> u64;
}

impl MyContract for Contract {
    fn test_function() -> u64 {
      storage.owner
    }
}
